<resources>
    <string name="app_name">#DFUA 2016</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="login_with_google_plus">Login with Google +</string>
    <string name="g_plus">G+</string>
    <string name="do_this_leter">do this later</string>
    <!--Draver Navigation-->
    <string name="blog_string">Blog</string>

    <string name="schedule_string">Schedule</string>
    <string name="speakers_string">Speakers</string>
    <string name="share_string">Share</string>
    <string name="logout">Logout</string>
    <string name="invite_string">Invite</string>
    <string name="title_activity_speaker">SpeakerActivity</string>


</resources>
