<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="devfest.controller.LoginActivity">

    <View
        android:id="@+id/midle_of_screen"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:background="@color/colorAccent" />


    <com.google.android.gms.common.SignInButton
        android:id="@+id/login_g_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/midle_of_screen"
        android:text="@string/g_plus" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/login_g_plus"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:text="@string/login_with_google_plus" />

    <TextView
        android:id="@+id/login_anonimus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/midle_of_screen"
        android:layout_centerHorizontal="true"
        android:text="@string/do_this_leter"
        android:textStyle="italic" />


</LinearLayout>
